2A/05_Projet_GL/src/test/deca/context/invalid/complet/22_decl_param_type_indef.deca
// Description :
//    decl Param avec type non definie 
// Resultats :
//    ligne 10 : identiﬁcateur de type non déclaré 
// Historique :
//  cree le 16/01/2024

class A {

    int get(String str) {
        
    }
}